Replaced brandDTD namespace with overlayDTD.
This namespace was renamed due to conflicts if you import brand.dtd

--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -1,6 +1,6 @@
-﻿<!ENTITY % brandDTD
+﻿<!ENTITY % overlayDTD
     SYSTEM "chrome://classic_theme_restorer/content/overlay.dtd">
-  %brandDTD;
+  %overlayDTD;
 <!-- Do not edit above this line and do not edit the variable '&brandShortName;' inside translated strings -->
 
 <!ENTITY Ctr_title			"Classic Theme Restorer">
